--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     },
     "require-dev": {
         "symfony/var-dumper": "*",
-        "phpstan/phpstan": "^1.12"
+        "phpstan/phpstan": "^1.12",
+        "phpunit/phpunit": "^11.3"
     }
 }
