--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         php-version: '8.3'
         tools: composer, phpunit, phpstan
-        extensions: redis, memcached
+        extensions: sqlite3
         coverage: xdebug
 
     # Install dependencies
