--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,25 +22,17 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.3'
-        tools: composer, phpunit, phpstan
+        tools: composer
         extensions: sqlite3
         coverage: xdebug
 
     # Install dependencies
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
-
-    # Cache composer dependencies
-    - name: Cache Composer dependencies
-      uses: actions/cache@v4
-      with:
-        path: vendor
-        key: composer-${{ hashFiles('**/composer.lock') }}
-        restore-keys: composer-
     
     # Run PHPStan for static analysis
     - name: Run PHPStan
-      run: vendor/bin/phpstan analyse
+      run: composer analyse
 
     # Run PHPUnit tests with coverage
     - name: Run PHPUnit
